# C-collections

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/dictionary/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  Trie.cpp  Trie.h
src/list/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  LinkedListNode.cpp  LinkedListNode.h
src/tree/: BinarySearchTree.cpp  BinarySearchTree.h  BinarySearchTreeNode.cpp  BinarySearchTreeNode.h  CMakeLists.txt
test/dictionary/: Dictionary_unit_test.cpp
test/list/: LinkedListNode_unit_test.cpp  LinkedList_unit_test.cpp
test/tree/: BinarySearchTree_unit_test.cpp
